force-app/main/default/objects/CVE_Engagement__c/CVE_Engagement__c.object-meta.xml
<CustomObject>
    <description>SAL26-639</description>
    <label>Economics (CVE) engagement</label>
    <nameField>
        <displayFormat>CVE - {000000}</displayFormat>
        <label>CVE Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Economics (CVE) engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>