force-app/main/default/objects/CVE_Engagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL26-639: The associated Account record related to the engagement.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Economics (CVE) engagements</relationshipLabel>
    <relationshipName>CVE_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>