force-app/main/default/objects/CVE_Engagement__c/fields/Architectural_Workshop_Executed__c.field-meta.xml
<CustomField>
    <fullName>Architectural_Workshop_Executed__c</fullName>
    <description>SAL26-639: Has an Architectural Workshop taken place for the opportunities in scope for this request?</description>
    <inlineHelpText>Has an Architectural Workshop taken place for the opportunities in scope for this request?</inlineHelpText>
    <label>Discovery and Define Tech Win Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>