force-app/main/default/objects/CVE_Engagement__c/fields/Architectural_Workshop_URL__c.field-meta.xml
<CustomField>
    <fullName>Architectural_Workshop_URL__c</fullName>
    <description>SAL26-639: Add the URL(s) for the Architectural Workshop for this request and provide access to CVE@rubrik.com</description>
    <inlineHelpText>Add the URL(s) for the Architectural Workshop for this request and provide access to CVE@rubrik.com</inlineHelpText>
    <label>Discovery / Exec Presentations URL(s)</label>
    <type>Url</type>
</CustomField>