force-app/main/default/objects/CVE_Engagement__c/fields/Brief_Outline__c.field-meta.xml
<CustomField>
    <fullName>Brief_Outline__c</fullName>
    <description>What do you require the CXO Value Economics team’s support with?</description>
    <label>Brief Outline of Expectations</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>