force-app/main/default/objects/CVE_Engagement__c/fields/BVA_Echo_back__c.field-meta.xml
<CustomField>
    <fullName>BVA_Echo_back__c</fullName>
    <description>SAL26-639: Summary of the customer’s feedback on the Business Value Assessment (BVA) presentation.</description>
    <inlineHelpText>Summary of the customer’s feedback on the Business Value Assessment (BVA) presentation.</inlineHelpText>
    <label>BVA Echo-back</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presented to Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Presented to Champion</fullName>
            </value>
            <value>
                <fullName>Did not present to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>