force-app/main/default/objects/CVE_Engagement__c/fields/Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Collaboration__c</fullName>
    <description>SAL26-639: Level of collaboration observed during the engagement, including cross-functional involvement.</description>
    <inlineHelpText>Level of collaboration observed during the engagement, including cross-functional involvement.</inlineHelpText>
    <label>Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>