force-app/main/default/objects/CVE_Engagement__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>SAL26-639: Lists key stakeholders who participated or were engaged during the CVE process.</description>
    <inlineHelpText>Lists key stakeholders who participated or were engaged during the CVE process.</inlineHelpText>
    <label>Stakeholders Engaged</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>