force-app/main/default/objects/CVE_Engagement__c/fields/CVE_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>CVE_Engagement_Type__c</fullName>
    <description>SAL26-639: Type of CVE (Customer Value Engagement) conducted, e.g., BVA, Workshop, Value Hypothesis.</description>
    <inlineHelpText>Type of CVE (Customer Value Engagement) conducted, e.g., BVA, Workshop, Value Hypothesis.</inlineHelpText>
    <label>CVE Engagement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cyber Resiliency Maturity Readiness Assessment</fullName>
            </value>
            <value>
                <fullName>Account Planning &amp; Advisory</fullName>
            </value>
            <value>
                <fullName>Value Hypothesis</fullName>
            </value>
            <value>
                <fullName>BVR - BVA Prep</fullName>
            </value>
            <value>
                <fullName>Business Value Assessment (BVA)</fullName>
            </value>
            <value>
                <fullName>Business Value Realization (BVR)</fullName>
            </value>
            <value>
                <fullName>Cost to Run (CIR) Analysis</fullName>
            </value>
            <value>
                <fullName>Total Cost of Ownership (TCO) - Lite Analysis</fullName>
            </value>
            <value>
                <fullName>Total Cost of Ownership (TCO) - Full Analysis</fullName>
            </value>
            <value>
                <fullName>PoC Development Support</fullName>
            </value>
            <value>
                <fullName>RFP Support</fullName>
            </value>
            <value>
                <fullName>Executive Business Briefings</fullName>
            </value>
            <value>
                <fullName>Executive Business Reviews (EBR)</fullName>
            </value>
            <value>
                <fullName>Customer Value Story</fullName>
            </value>
            <value>
                <fullName>Enablement</fullName>
            </value>
            <value>
                <fullName>3 Whys / PoV</fullName>
            </value>
            <value>
                <fullName>Deal review</fullName>
            </value>
            <value>
                <fullName>Echo-back</fullName>
            </value>
            <value>
                <fullName>Business Value Analysis (BVA)</fullName>
                <isActive>false</isActive>
                <label>Business Value Analysis (BVA)</label>
            </value>
            <value>
                <fullName>Cost to Run Analysis</fullName>
                <isActive>false</isActive>
                <label>Cost to Run Analysis</label>
            </value>
            <value>
                <fullName>Value Consulting</fullName>
                <isActive>false</isActive>
                <label>Value Consulting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>