force-app/main/default/objects/CVE_Engagement__c/fields/CVE_Stage__c.field-meta.xml
<CustomField>
    <fullName>CVE_Stage__c</fullName>
    <description>SAL26-639: Current lifecycle stage of the CVE, such as Discovery, Execution, Finalization.</description>
    <inlineHelpText>Current lifecycle stage of the CVE, such as Discovery, Execution, Finalization.</inlineHelpText>
    <label>CVE Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Request Received</fullName>
                <default>true</default>
                <label>1-Request Received</label>
            </value>
            <value>
                <fullName>2-Qualifying</fullName>
            </value>
            <value>
                <fullName>3-Active Engagement In-Progress</fullName>
            </value>
            <value>
                <fullName>4-Engagement Completed</fullName>
            </value>
            <value>
                <fullName>5-Stalled / Discontinued</fullName>
            </value>
            <value>
                <fullName>6-CVE Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>