force-app/main/default/objects/CVE_Engagement__c/fields/CVE_Stakeholder_Champion__c.field-meta.xml
<CustomField>
    <fullName>CVE_Stakeholder_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL26-639: The primary internal or customer-side champion driving the CVE engagement.</description>
    <inlineHelpText>The primary internal or customer-side champion driving the CVE engagement.</inlineHelpText>
    <label>CVE Stakeholder Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Economics (CVE) engagements</relationshipLabel>
    <relationshipName>CVE_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>