force-app/main/default/objects/CVE_Engagement__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>SAL26-639: The end date of the CVE or related value engagement activity.</description>
    <inlineHelpText>The end date of the CVE or related value engagement activity.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>