force-app/main/default/objects/CVE_Engagement__c/fields/Link_to_the_Value_Output__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_Value_Output__c</fullName>
    <description>SAL26-639: URL linking to the final CVE deliverable or value summary shared with the customer.</description>
    <inlineHelpText>URL linking to the final CVE deliverable or value summary shared with the customer.</inlineHelpText>
    <label>Link to the Value Output</label>
    <length>255</length>
    <type>Text</type>
</CustomField>