force-app/main/default/objects/CVE_Engagement__c/fields/N_E_Open_Opp_Total_at_CVE_Creation__c.field-meta.xml
<CustomField>
    <fullName>N_E_Open_Opp_Total_at_CVE_Creation__c</fullName>
    <description>SAL26-847: shows number of open sales opportunities related to account</description>
    <label>N/E Open Opp Total at CVE Creation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>