force-app/main/default/objects/CVE_Engagement__c/fields/Notes_additional_detail_for_the_CVE_te__c.field-meta.xml
<CustomField>
    <fullName>Notes_additional_detail_for_the_CVE_te__c</fullName>
    <description>SAL26-639: Any additional information that will help us evaluate your request?</description>
    <inlineHelpText>Any additional information that will help us evaluate your request?</inlineHelpText>
    <label>Additional notes, URL links, requests</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>