force-app/main/default/objects/CVE_Engagement__c/fields/Notes_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Notes_Next_Steps__c</fullName>
    <description>SAL26-639: Actionable items or next steps discussed or agreed upon during the engagement.</description>
    <inlineHelpText>Actionable items or next steps discussed or agreed upon during the engagement.</inlineHelpText>
    <label>Notes &amp; Next Steps</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>