force-app/main/default/objects/CVE_Engagement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>SAL26-639: Add open opportunities that align to the proposed request.</description>
    <inlineHelpText>Add open opportunities that align to the proposed request.</inlineHelpText>
    <label>Opportunity</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>