force-app/main/default/objects/CVE_Engagement__c/fields/Org_Chart_Account_Planning_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_Chart_Account_Planning_Document_URL__c</fullName>
    <description>Provide the document with key stakeholders, champion(s), EB(s) identified</description>
    <label>Org Chart/Account Planning Document URL</label>
    <type>Url</type>
</CustomField>