force-app/main/default/objects/CVE_Engagement__c/fields/Org_Chart_or_Account_Planning_Document__c.field-meta.xml
<CustomField>
    <fullName>Org_Chart_or_Account_Planning_Document__c</fullName>
    <description>Do you have documented key stakeholders, champion(s) and EB(s) identified</description>
    <label>Org Chart or Account Planning Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>