force-app/main/default/objects/CVE_Engagement__c/fields/Supporting_Value_Consultant_on_the_deal__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Value_Consultant_on_the_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL26-639: Name of the value consultant providing support on this opportunity.</description>
    <inlineHelpText>Name of the value consultant providing support on this opportunity.</inlineHelpText>
    <label>Supporting Value Consultant on the deal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CVE_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>