force-app/main/default/objects/CVE_Engagement__c/fields/Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Timeliness__c</fullName>
    <description>SAL26-639: Assessment of how timely the engagement was executed, relative to the deal cycle</description>
    <inlineHelpText>Assessment of how timely the engagement was executed, relative to the deal cycle</inlineHelpText>
    <label>Timeliness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engaged at correct time</fullName>
            </value>
            <value>
                <fullName>Engaged late in sales cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>