force-app/main/default/objects/CVE_Engagement__c/fields/Transitioned_to_CS__c.field-meta.xml
<CustomField>
    <fullName>Transitioned_to_CS__c</fullName>
    <description>SAL26-639: Indicates whether the engagement has been formally handed over to Customer Success.</description>
    <inlineHelpText>Indicates whether the engagement has been formally handed over to Customer Success.</inlineHelpText>
    <label>Transitioned to CS</label>
    <type>Date</type>
</CustomField>