force-app/main/default/objects/CVE_Engagement__c/fields/Value_Consultant_on_the_deal__c.field-meta.xml
<CustomField>
    <fullName>Value_Consultant_on_the_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL26-639: Lead value consultant responsible for the CVE engagement.</description>
    <inlineHelpText>Lead value consultant responsible for the CVE engagement.</inlineHelpText>
    <label>Value Consultant on the deal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CVE_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>