force-app/main/default/objects/CVE_Engagement__c/fields/Value_Economics_Scope__c.field-meta.xml
<CustomField>
    <fullName>Value_Economics_Scope__c</fullName>
    <description>SAL26-639: Select what products are currently in scope for your proposed request.</description>
    <inlineHelpText>Select what products are currently in scope for your proposed request.</inlineHelpText>
    <label>Value Economics Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDP Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>EDP Business Edition</fullName>
            </value>
            <value>
                <fullName>EDP Foundation Edition</fullName>
            </value>
            <value>
                <fullName>Cloud Data Protection</fullName>
            </value>
            <value>
                <fullName>SaaS - M365</fullName>
            </value>
            <value>
                <fullName>SaaS - SFDC</fullName>
            </value>
            <value>
                <fullName>SaaS - Jira</fullName>
            </value>
            <value>
                <fullName>SaaS - Dynamics</fullName>
            </value>
            <value>
                <fullName>Unstructured Data Protection</fullName>
            </value>
            <value>
                <fullName>DSPM</fullName>
            </value>
            <value>
                <fullName>Cloud Vault</fullName>
            </value>
            <value>
                <fullName>Laminar</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Annapurna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>