force-app/main/default/objects/CVE_Engagement__c/fields/Will_the_EB_sponsor_this__c.field-meta.xml
<CustomField>
    <fullName>Will_the_EB_sponsor_this__c</fullName>
    <description>SAL26-639: Has the Executive Buyer been engaged and supportive of any of the proposed Customer Value Economics engagement types?</description>
    <inlineHelpText>Has the Executive Buyer been engaged and supportive of any of the proposed Customer Value Economics engagement types?</inlineHelpText>
    <label>Exec Buyer / Champion sponsoring?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>