force-app/main/default/objects/CVE_Engagement__c/fields/X3_Why_s_Presented__c.field-meta.xml
<CustomField>
    <fullName>X3_Why_s_Presented__c</fullName>
    <description>Has a 3 Why&apos;s session taken place for this account overall or for the opportunities in scope for this request?</description>
    <inlineHelpText>Has a 3 Why&apos;s session taken place for this account overall or for the opportunities in scope for this request?</inlineHelpText>
    <label>3 Why’s Presented</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>